# pcop

./: .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml
argus/: .env.example  pyproject.toml
argus/services/detection/: config.py  main.py
argus/services/detection/agents/: base_agent.py  herald_engagement.py  herald_lifecycle.py  herald_location.py  herald_market.py  herald_recency.py  herald_salary.py  herald_sentiment.py  herald_stress.py  herald_transaction.py
argus/services/detection/baseline/: tempo.py
argus/services/detection/db/: signal_repository.py
argus/services/detection/joint/: nexus.py  oracle.py  warden.py
argus/services/detection/methods/: adaptive_sr.py  beta_cusum.py  cfsi.py  cusum.py  ewma.py  mcc_cluster.py  page_hinkley.py  sa_ewma.py  sprt.py
argus/services/detection/state/: echo.py
argus/services/detection/tests/: test_echo.py  test_herald_sentiment.py  test_herald_transaction.py  test_nexus.py  test_oracle.py  test_tempo.py  test_warden.py
chronos/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
chronos/api/: database.py  main.py
chronos/api/models/: risk.py
chronos/api/routers/: model_health.py  risk_scores.py
chronos/data/: action_plans.json  herald_content.json  scores_v2.json
chronos/infra/postgres/migrations/: env.py
chronos/infra/postgres/migrations/versions/: 000_initial_tables.py  001_rename_transformer_to_tare.py  002_add_chronos_columns.py  003_add_signal_expiry.py
chronos/ml/: register_all_models.py
chronos/ml/checkpoints/: aegis_reference.json  causal_net_control.json  causal_net_s_learner.json  causal_net_treated.json  fusion_weights.json  genesis_lr.pkl  habitat_pass1.json  tare_churn.onnx  tare_churn.onnx.data  tare_finetune_best.pt  tare_finetune_final.pt  tare_pretrain_final.pt
chronos/ml/datasets/: README.md  download_public_datasets.py  manifest.json
chronos/ml/features/: cold_start_features.py  sequence_builder.py  tabular_features.py
chronos/ml/features/tests/: test_cold_start_features.py  test_sequence_builder.py  test_tabular_features.py
chronos/ml/generators/: preprocess_mbd_mini.py  synthetic_sequences_from_bankchurners.py
chronos/ml/generators/tests/: test_synthetic_sequences.py
chronos/ml/training/: causal_net_train.py  export_onnx.py  genesis_train.py  habitat_train.py  tare_finetune.py  tare_pretrain.py
chronos/scripts/: generate_demo_data.py
chronos/services/scoring/: Dockerfile  scheduler.py
chronos/services/scoring/fusion/: calibration.py  fusion_x.py  prism_reconciler.py
chronos/services/scoring/fusion/tests/: test_fusion_x.py  test_prism.py
chronos/services/scoring/guards/: aegis_detector.py
chronos/services/scoring/guards/tests/: test_aegis.py
chronos/services/scoring/models/: causal_net.py  genesis_scorer.py  habitat_pass2.py  habitat_scorer.py  tare_encoder.py
chronos/services/scoring/models/tests/: test_causal_net.py  test_genesis.py  test_habitat_pass2.py  test_tare_encoder.py
chronos/services/scoring/serving/: bank_loader.py  batch_scorer.py  onnx_runtime.py  sentinel_realtime.py
chronos/services/scoring/serving/tests/: test_batch_scorer.py  test_sentinel.py
chronos/services/scoring/tests/: conftest.py  test_integration.py
compass/: .env.example  pyproject.toml
compass/infra/kafka/: topics.yml
compass/scripts/: run_demo_compass.py
compass/services/orchestration/: config.py  main.py  state.py
compass/services/orchestration/clients/: azure_foundry.py
compass/services/orchestration/db/: connection.py
compass/services/orchestration/graph/: builder.py  edges.py
compass/services/orchestration/kafka/: consumer.py  producer.py
compass/services/orchestration/nodes/: cognition.py  compass_nba.py  dispatch.py  gate.py  intake.py  merge.py  verify.py
compass/services/orchestration/prompts/: cognition_system.py  compass_system.py
compass/services/orchestration/tests/: conftest.py  test_cognition.py  test_compass_nba.py  test_dispatch.py  test_gate.py  test_intake.py  test_integration_demo.py  test_merge.py  test_tools_db_reads.py  test_tools_db_writes.py  test_verify.py
compass/services/orchestration/tools/: db_reads.py  db_writes.py
herald/: .env.example  pyproject.toml
herald/infra/kafka/: topics.yml
herald/scripts/: run_demo_herald.py
herald/services/content/: config.py  main.py  state.py  tone.py
herald/services/content/clients/: azure_foundry.py
herald/services/content/db/: connection.py  reads.py  writes.py
herald/services/content/dispatchers/: email.py  push.py  rm_queue.py  sms.py
herald/services/content/graph/: builder.py
herald/services/content/kafka/: consumer.py  producer.py
herald/services/content/nodes/: brief.py  chronicle.py  dispatch.py  scribe.py  sentinel.py
herald/services/content/prompts/: channel_prompts.py  prohibited_phrases.py
herald/services/content/tests/: conftest.py  test_brief.py  test_chronicle.py  test_dispatch.py  test_integration.py  test_scribe.py  test_sentinel.py
oracle/: .env.example  pyproject.toml
oracle/scripts/: run_demo_oracle.py
oracle/services/analytics/: scheduler.py
oracle/services/analytics/clients/: azure_foundry.py
oracle/services/analytics/cycles/: narrate.py  refine.py  retrain.py  route.py
oracle/services/analytics/db/: reads.py  writes.py
oracle/services/analytics/prompts/: narrate_system.py
oracle/services/analytics/tests/: conftest.py  test_narrate.py  test_refine.py  test_retrain.py  test_route.py
verdict/: .env.example  pyproject.toml
verdict/infra/kafka/: topics.yml
verdict/scripts/: run_demo_verdict.py
verdict/services/measurement/: schemas.py
verdict/services/measurement/db/: reads.py  writes.py
verdict/services/measurement/kafka/: consumer.py  producer.py
verdict/services/measurement/nodes/: attribute.py  collect.py  holdout.py  observe.py  score.py
verdict/services/measurement/tests/: conftest.py  test_attribute_dr.py  test_holdout.py  test_integration.py  test_observe.py
(+166 files in other folders)
