[tool.poetry]
name = "argus-detection"
version = "1.0.0"
description = "ARGUS Statistical Signal Detection Engine — Layer 2 PCOP v3"
authors = ["PCOP ML Team"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
scipy = "^1.13.0"
scikit-learn = "^1.4.0"
pandas = "^2.2.1"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
kafka-python = "^2.0.2"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
mypy = "^1.9.0"
ruff = "^0.4.1"

[tool.pytest.ini_options]
testpaths = ["services"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
