[tool.poetry]
name = "chronos-scoring"
version = "1.0.0"
description = "CHRONOS Neural Risk Intelligence Engine — Layer 3 ML Scoring"
authors = ["PCOP ML Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.0"
onnx = "^1.16.0"
onnxruntime = "^1.18.0"
xgboost = "^2.0.3"
scikit-learn = "^1.4.0"
scikit-uplift = "^0.5.1"
shap = "^0.44.0"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
redis = "^5.0.3"
kafka-python = "^2.0.2"
mlflow = "^2.12.1"
apscheduler = "^3.10.4"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
pandas = "^2.2.1"
pyarrow = "^15.0.2"
scipy = "^1.13.0"
numpy = "^1.26.4"
tqdm = "^4.66.2"
requests = "^2.31.0"
kaggle = "^1.6.6"
huggingface-hub = "^0.22.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.6"
mypy = "^1.9.0"
ruff = "^0.4.1"

[tool.pytest.ini_options]
testpaths = ["ml", "services", "api"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=85"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
