[tool.poetry]
name = "compass-orchestration"
version = "1.0.0"
description = "COMPASS Agentic Orchestration Engine — Layer 4"
authors = ["PCOP ML Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
langgraph = "^0.1.0"
langchain = "^0.2.0"
langchain-openai = "^0.1.0"
langchain-core = "^0.2.0"
azure-ai-inference = "^1.0.0b3"
azure-identity = "^1.16.0"
openai = "^1.30.0"
asyncpg = "^0.29.0"
redis = "^5.0.3"
confluent-kafka = "^2.4.0"
alembic = "^1.13.1"
sqlalchemy = "^2.0.29"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
mypy = "^1.9.0"
ruff = "^0.4.1"

[tool.pytest.ini_options]
testpaths = ["services"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "--cov=services --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
