[tool.poetry]
name = "oracle"
version = "0.1.0"
description = "PCOP v3.0 Layer 7 — ORACLE: Optimisation, Retraining, Analytics, and Continuous Learning Engine"
packages = [{ include = "services" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7"
asyncpg = "^0.29"
confluent-kafka = "^2.4"
mlflow = "^2.13"
scikit-learn = "^1.5"
numpy = "^1.26"
pandas = "^2.2"
scipy = "^1.13"
apscheduler = "^3.10"
langchain-openai = "^0.1"
langchain-core = "^0.2"
python-dotenv = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-mock = "^3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["services/analytics/tests"]
